added aria label to current page

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <nav aria-label="main navigation" role="navigation">
         <ul role="presentation">
-            <li><a href="index.php">Home</a></li>
+            <li><a href="index.php" aria-current="page"></a>Home</a></li>
             <li><a href="about.php">About</a></li>
         </ul>
     </nav>
